--- a/assets/sass/components/_slideout.scss
+++ b/assets/sass/components/_slideout.scss
@@ -19,6 +19,7 @@
   position:relative;
   z-index: 1;
   will-change: transform;
+  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
 }
 
 .slideout-open,
